--- a/styles/protyle/block/math.scss
+++ b/styles/protyle/block/math.scss
@@ -3,7 +3,7 @@
   margin: 0 3px;
   .katex {
     font-size: 100% ;
-    font-family: KaTeX_Main,var(--b3-font-family-math), "HarmonyOS Sans SC 01", Times New Roman,
+    font-family: KaTeX_Main,var(--b3-font-family-math), "HarmonyOS Sans SC", Times New Roman,
       serif ;
   }
 }
