--- a/styles/component/select.scss
+++ b/styles/component/select.scss
@@ -1,4 +1,3 @@
-
 @use "../common" as *;
 //选择菜单
 
@@ -6,7 +5,8 @@
   @include component();
   background-color: get($bg, "component", 1);
   &:hover,
-  &:focus {
+  &:focus,
+  &:focus-visible {
     box-shadow: unset;
   }
 }
