--- a/themes/tdesign/_palette.scss
+++ b/themes/tdesign/_palette.scss
@@ -1,4 +1,9 @@
+@use "sass:map";
+@use "sass:color";
 
+@function hex2rgb($color) {
+  @return color.red($color), color.green($color), color.blue($color);
+}
 
 // Color
 $light-colors: () !default;
