--- a/themes/one-dark/dark.scss
+++ b/themes/one-dark/dark.scss
@@ -34,7 +34,7 @@
   // 基础颜色
   --brand-base: 77, 120, 204; // 色彩-品牌-可操作
   --warning-base: #{hex2rgb(#d19a66)}; // 色彩-功能-警告
-  --error-base: #{hex2rgb(#f88070)}; // 色彩-功能-失败
+  --error-base: #{hex2rgb(#e06c75)}; // 色彩-功能-失败
   --success-base: #{hex2rgb(#73c991)}; // 色彩-功能-成功
   --info-base: var(--blue-8);
   --cyan-base: var(--cyan-6);
