fix: :bug: 提高list文字可见度

--- a/styles/component/list.scss
+++ b/styles/component/list.scss
@@ -27,7 +27,7 @@ $list-depth: 7;
   height: auto;
 }
 
-@mixin content($color: "secondary") {
+@mixin content($color: "primary") {
   .b3-list-item {
     &__text {
       color: get($text, $color);
