--- a/styles/layout/top-bar.scss
+++ b/styles/layout/top-bar.scss
@@ -56,7 +56,7 @@ $map: (
     @include center();
     @include component-base();
     content: $content;
-    color: get($text, "secondary");
+    color: get($text, "primary");
     z-index: 0;
     width: 100%;
   }
@@ -123,7 +123,7 @@ $map: (
             width: auto;
             font-size: 11px;
             z-index: 0;
-            color: get($text, "secondary");
+            color: get($text, "primary");
           }
 
           $types: "捐赠者", "支持者", "赞助者";
