--- a/styles/base/typography.scss
+++ b/styles/base/typography.scss
@@ -1,11 +1,6 @@
 @use "../common" as *;
 
 @font-face {
-  font-family: "HarmonyOS Sans SC";
-  src: url("#{$asset-path}/fonts/HarmonyOS_Sans_SC_Regular.ttf");
-}
-
-@font-face {
   font-family: "Noto Sans SC";
   src: url("#{$asset-path}/fonts/NotoSansSC-Regular.otf");
 }
@@ -17,15 +12,15 @@
 
 :root {
   // 字体
-  --b3-font-family: -apple-system, BlinkMacSystemFont, Segoe UI,
-    "HarmonyOS Sans SC", "Noto Sans SC", "JetBrains Mono", "Helvetica Neue",
-    "Luxi Sans", "DejaVu Sans", "Hiragino Sans GB", "Microsoft Yahei",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji",
-    "Segoe UI Symbol", "Android Emoji", "EmojiSymbols";
-  --b3-font-family-code: "JetBrains Mono", "HarmonyOS Sans SC", "Noto Sans SC",
-    mononoki, Consolas, "Liberation Mono", Menlo, Courier, monospace,
-    "Apple Color Emoji", "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol",
-    "Android Emoji", "EmojiSymbols";
+  --b3-font-family: -apple-system, BlinkMacSystemFont, Segoe UI, "Noto Sans SC",
+    "JetBrains Mono", "Helvetica Neue", "Luxi Sans", "DejaVu Sans",
+    "Hiragino Sans GB", "Microsoft Yahei", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
+    "EmojiSymbols";
+  --b3-font-family-code: "JetBrains Mono", "Noto Sans SC", mononoki, Consolas,
+    "Liberation Mono", Menlo, Courier, monospace, "Apple Color Emoji",
+    "Segoe UI Emoji", "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
+    "EmojiSymbols";
   --b3-font-family-graph: mononoki;
   --b3-font-family-emoji: "Segoe UI Emoji", "Segoe UI Symbol", "Segoe UI",
     "Apple Color Emoji", "Twemoji Mozilla", "Noto Color Emoji", "Android Emoji";
