--- a/styles/protyle/block/code.scss
+++ b/styles/protyle/block/code.scss
@@ -83,7 +83,7 @@ $linum-w: 74px;
     padding: 0;
     background-color: get($bg, "base", 1);
     border-radius: get($radius, "base");
-    font-family: "HarmonyOS Sans SC", "Noto Sans SC", "JetBrains Mono";
+    font-family:  "Noto Sans SC", "JetBrains Mono";
   }
 
   // 代码区
