fix: :bug: 修复列表嵌套引述块的样式问题

--- a/styles/common/utils.scss
+++ b/styles/common/utils.scss
@@ -144,6 +144,9 @@
 @mixin item-focus($important: false) {
   @include item("focus", 1, $important);
   @include color("focus", $important);
+  &:focus {
+    background-color: get($bg, "focus", 1) is-important($important);
+  }
 }
 
 @mixin item-primary($important: false) {
