--- a/styles/dialog/search.scss
+++ b/styles/dialog/search.scss
@@ -153,7 +153,7 @@ $form-h: $btn-h + $padding * 2 + 1px;
     /*搜索结果列表占一半宽度，靠左排列*/
     #searchList {
       float: left;
-      width: 33vw;
+      width: 45%;
       border-right: $fn-border;
     }
 
