--- a/styles/panel/index.scss
+++ b/styles/panel/index.scss
@@ -1,5 +1,7 @@
 @use "block-icons";
 
+@use "block-popover";
+
 @use "file-tree";
 
 @use "outline";
@@ -9,8 +11,6 @@
 @use "loading";
 
 @use "full-screen";
-
-@use "pop-over";
 
 @use "emojis";
 
