--- a/styles/common/utils.scss
+++ b/styles/common/utils.scss
@@ -171,7 +171,7 @@
 @mixin item-close($important: false) {
   transition: get($transition, "all");
   &:hover {
-    color: get($text, "anti");
+    color: get($text, "anti") is-important($important);
     background-color: get($color, "error", "base") is-important($important);
   }
   svg {
